# BRSCPlusPlus

./: Abstract.cpp  Abstract.h  BRSCPlusPlus.pro  Basefunction.cpp  Basefunction.h  CMakeLists.txt  Login.cpp  Login.h  Mainwindow.cpp  Mainwindow.h  Newfolder.cpp  Newfolder.h  README.md  Register.cpp  Register.h  main.cpp
MainWindow/LeftToolWindow/: ProjectFileTree.cpp  ProjectFileTree.h  image_source.qrc
MainWindow/TopMenuWindow/: Aboutbrs.cpp  Aboutbrs.h  Alldialog.cpp  Alldialog.h  BuildAction.cpp  BuildAction.h  Newfile.cpp  Newfile.h  Newfolder.cpp  Newfolder.h  Openfloder.cpp  Openfloder.h  cmake.txt
Settings/: SettingsAdmin.cpp  SettingsAdmin.cpp.autosave  SettingsAdmin.h
Settings/Plugins/: ColorAdmin.cpp  ColorAdmin.h  FontAdmin.cpp  FontAdmin.h
Settings/Plugins/CoreFont/: Font.qrc
SourceFile/: FilePicture.qrc  QTSTART
mos/: CMakeLists.txt  README.md
mos/include/: PythonInLine.h
